<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fre_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:background="#fff"
    android:gravity="center_horizontal">


    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_truelocation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/welcome_to"
            android:textColor="#243665"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/trueLocation_browser"
            android:textColor="#243665"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/text_welcome1"
        android:textColor="#243665"
        android:textSize="18sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#243665"
        android:text="@string/term_and_service1"
        android:gravity="center"
        android:fontFamily="@font/opensans_regular"
        android:textSize="14sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTermOfService"
        android:textColor="#59CEEA"
        android:text="@string/term_and_service2"
        android:gravity="center"
        android:fontFamily="@font/opensans_regular"
        android:textSize="14sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/intro_button_selector"
        android:fontFamily="@font/opensans_regular"
        android:paddingHorizontal="10dp"
        android:text="@string/accept_continue"
        android:textAllCaps="false"
        android:textColor="#243665"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/intro_footer" />
</LinearLayout>